--- a/app/views/listings/payment.html.erb
+++ b/app/views/listings/payment.html.erb
@@ -4,63 +4,58 @@
 
             <div class="panel-heading">
                 <h2>Pay for Your New Listing</h2>
-                <div class = "small-heading">(All fields required.) </div>
             </div>
 
             <div class="panel-body">
 
-<script src="https://js.stripe.com/v3/"></script>
+                <%= simple_form_for(@listing, 
+                    :url => url_for(:action => 'create_payment', :controller => 'listings'),
+                    :method => 'post',
+                    html: {
+                        authenticity_token: true,
+                        class: 'form-horizontal',
+                        id: 'payment-form',
+                        multipart: true,
+                    }
+                ) do |f|%>
 
-<form action="/listings/create_payment/<%= @listing.id %>" method="post" id="payment-form">
-  <div class="form-row">
-    <label for="card-element">
-      Credit or debit card
-    </label>
-    <div id="card-element">
-      <!-- A Stripe Element will be inserted here. -->
+                    <div class="form-row">
+
+                        <div class="input-group">
+                            <div class="input-group-addon">Amount to be charged</div>
+                            <div class="form-control">
+                                $<%= @listing.charge_amount.to_s.insert(-3, '.') %> USD
+                            </div>
+                        </div>
+                        <br>
+
+                        <div id="card-element">
+                        <!-- A Stripe Element will be inserted here. -->
+                        </div>
+
+                        <!-- Used to display form errors. -->
+                        <div id="card-errors" role="alert"></div>
+                    </div>
+
+                    <input type="hidden" value="<%= form_authenticity_token() %>"name="authenticity_token"/>
+                    <br>
+                    
+                    <div class="input-group">
+                        <div class="actions">
+                            <%= f.submit "Submit Payment", class: "btn btn-success", id: "listings_submit" %>
+                        </div>
+                    </div>
+                
+                <% end %>
+
+            </div>
+        </div>
     </div>
+</div>
 
-    <!-- Used to display form errors. -->
-    <div id="card-errors" role="alert"></div>
-  </div>
+<%= render "processing_overlay" %>
 
-    <input type="hidden" value="<%= form_authenticity_token() %>"name="authenticity_token"/>
-  <button>Submit Payment</button>
-</form>
-
-<style>
-    /**
-    * The CSS shown here will not be introduced in the Quickstart guide, but shows
-    * how you can use CSS to style your Element's container.
-    */
-    .StripeElement {
-    box-sizing: border-box;
-
-    height: 40px;
-
-    padding: 10px 12px;
-
-    border: 1px solid transparent;
-    border-radius: 4px;
-    background-color: white;
-
-    box-shadow: 0 1px 3px 0 #e6ebf1;
-    -webkit-transition: box-shadow 150ms ease;
-    transition: box-shadow 150ms ease;
-    }
-
-    .StripeElement--focus {
-    box-shadow: 0 1px 3px 0 #cfd7df;
-    }
-
-    .StripeElement--invalid {
-    border-color: #fa755a;
-    }
-
-    .StripeElement--webkit-autofill {
-    background-color: #fefde5 !important;
-    }
-</style>
+<script src="https://js.stripe.com/v3/"></script>
 
 <script>
     // Create a Stripe client.
@@ -110,14 +105,14 @@
 
     stripe.createToken(card).then(function(result) {
         if (result.error) {
-        // Inform the user if there was an error.
-        var errorElement = document.getElementById('card-errors');
-        errorElement.textContent = result.error.message;
+            // Inform the user if there was an error.
+            var errorElement = document.getElementById('card-errors');
+            errorElement.textContent = result.error.message;
         } else {
-        // Send the token to your server.
-        stripeTokenHandler(result.token);
+            // Send the token to your server.
+            stripeTokenHandler(result.token);
         }
-    });
+        });
     });
 
     // Submit the form with the token ID.
@@ -134,9 +129,37 @@
     form.submit();
     }
 </script>
-            </div>
-        </div>
-    </div>
-</div>
 
-<%= render "processing_overlay" %>
+<style>
+    /**
+    * The CSS shown here will not be introduced in the Quickstart guide, but shows
+    * how you can use CSS to style your Element's container.
+    */
+    .StripeElement {
+    box-sizing: border-box;
+
+    height: 40px;
+
+    padding: 10px 12px;
+
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: white;
+
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+    }
+
+    .StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+    }
+
+    .StripeElement--invalid {
+    border-color: #fa755a;
+    }
+
+    .StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+    }
+</style>
