Fixed another instance of the listing card video component.

--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -9,7 +9,7 @@
             <% @listings.each do |listing| %>
             <div class="panel panel-default pin-item">
                 <div class="panel-body">
-                    <%= render :partial => 'categories/item_card', locals: {listing: listing}  %>
+                    <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
                 </div>
                     <div class="panel-footer pin-content">
                     <div class="price"><b>$<%= listing.price %></b></div>
