MOVED sub/cat right sidebar into a partial. HTML markup clean up.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container_12">
   <%= link_to 'Connechub', root_path %> > <%= @category.name %> 
 <hr>
+
 <div class="leftbar">
-
-<%= render :partial => 'categories/show', locals: {listings: @listings}  %>
-
+  <%= render :partial => 'categories/show', locals: {listings: @listings}  %>
+</div>
