--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -3,6 +3,7 @@
 <div class="container_12">
   <%= link_to 'Connechub', root_path %> > <%= link_to @category.name, @category %> > <%= @subcategory.name %> 
 <hr>
-<div class="leftbar">
 
-<%= render :partial => 'categories/show', locals: {listings: @listings}  %>
+<div class="leftbar">
+  <%= render :partial => 'categories/show', locals: {listings: @listings}  %>
+</div>
