--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -1,55 +1,49 @@
 <div class = "grid transitions-enabled">
   <% if @listings.present? %>
-  <% @listings.each do |listing| %>
-      <div class="panel panel-default pin-item">
-          <div class="panel-body">
-            <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
-          </div>
-            <div class="panel-footer pin-content"> 
-            <div class="price"><b>$<%= listing.price %></b></div>
-            <div class="name"><b><%= link_to listing.title, listing %></b></div>
-            <div class="description"><%= listing.city %>, <%= listing.state %></div>
-            <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
-          <hr>
-            <div><%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>    <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
+    <% @listings.each do |listing| %>
+        <div class="panel panel-default pin-item">
+            <div class="panel-body">
+              <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
             </div>
-          </div>
-      </div>
-  <% end %>
+              <div class="panel-footer pin-content"> 
+              <div class="price"><b>$<%= listing.price %></b></div>
+              <div class="name"><b><%= link_to listing.title, listing %></b></div>
+              <div class="description"><%= listing.city %>, <%= listing.state %></div>
+              <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
+            <hr>
+              <div><%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>    <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
+              </div>
+            </div>
+        </div>
+    <% end %>
   <% else %>
     <p>No listings found!</>
   <% end %>
-</div>
+  </div>
 </div>
 <br>
+
 <div class="rightbar0">
-<div class="rightbar">
-  <div align="center" class="rightbar-top">
-    <%= form_tag search_listings_path, class:"form-inline", method: :get do |f| %>
-    <div class="space"><%= text_field_tag :search, nil, placeholder: 'search', class: "form-control", style: 'width: 150px; height: 30px' %></div>
+  <div class="rightbar">
+    <div align="center" class="rightbar-top">
+      <%= form_tag search_listings_path, class:"form-inline", method: :get do |f| %>
+      <div class="space"><%= text_field_tag :search, nil, placeholder: 'search', class: "form-control", style: 'width: 150px; height: 30px' %></div>
   
-    <div class="space"><%= 
-    #text_field_tag :location, nil, placeholder: 'near', class: "form-control" , style: 'width: 150px; height: 30px'
-    %></div>
+      <div class="space"><%= 
+      #text_field_tag :location, nil, placeholder: 'near', class: "form-control" , style: 'width: 150px; height: 30px'
+      %></div>
   
-	  <div class="space"><%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}), class: "form-control", style: 'width: 150px; height: 30px' %></div>
+	    <div class="space"><%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}), class: "form-control", style: 'width: 150px; height: 30px' %></div>
 	 
-    <%= submit_tag 'SEARCH', class: "btn btn-success", style: 'width: 80px; height: 30px'  %>
-  </div>
+      <%= submit_tag 'SEARCH', class: "btn btn-success", style: 'width: 80px; height: 30px'  %>
+    </div>
 
   <% end %>	
-</div>
-<br>
-<div class= 'categories1'>
-  <div align="center" style= "padding:10px 0px 0px 1px;" class = "small-heading"> More categories </div>
-<ul class='categories'>
-  <% all_categories.each do |category| %>
-    <li><%= link_to(category.name, category_path(category)) %></li>
-  <% end %>
-</ul>
-</div>
- <br>
-
+  </div>
   <br>
-</div>
-</div>
+
+    <%= render :partial => 'categories/more_categories', locals: {all_categories: all_categories}  %>
+
+    <br>
+  </div>
+
