--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,57 +1,57 @@
 <div class="content-fluid">
-<div class="row">
- <div class="col-xs-6 col-md-2">
-  <center>
-    <div  id="inside_view_left">
-      <br>
-      <div class="profile-info"><%= image_tag @user.avatar.url(:thumb), class: 'img-responsive', style: 'width: 100px; height: 100px' %></div>
-      <hr style= "width: 100px">
-      <div class="small-heading" style="color: #ffffff"><%= @user.username %></div>
-      <div class="hero-description" style="color: #ffffff" ><%= @user.bio %></div>
-      <br>
-      <div><%= link_to 'Edit Your Profile', edit_user_registration_path, class: "btn btn-success btn-sm" %></div>
-      <br>
+  <div class="row">
+    <!-- User profile dataum -->
+    <div class="col-xs-6 col-md-2">
+      <center>
+        <div  id="inside_view_left">
+          <br>
+          <div class="profile-info"><%= image_tag @user.avatar.url(:thumb), class: 'img-responsive', style: 'width: 100px; height: 100px' %></div>
+          <hr style= "width: 100px">
+          <div class="small-heading" style="color: #ffffff"><%= @user.username %></div>
+          <div class="hero-description" style="color: #ffffff" ><%= @user.bio %></div>
+          <br>
+          <div><%= link_to 'Edit Your Profile', edit_user_registration_path, class: "btn btn-success btn-sm" %></div>
+          <br>
+        </div>
+      </center>
     </div>
-  </center>
-</div>
 
-  <div class="col-xs-6 col-md-10">
-
-    <div class="hero-wrapper">
-      <div align="left">
-
-            <div class="container_12">
-            <div class = "small-heading">
-              <b>Active Posts: <%= @user.listings.count %></b>
-            </div>
-            <hr>
-            <div class = "grid transitions-enabled">
-              <% if @user.listings.present? %>
-                <% @user.listings.each do |listing| %>
-                    <div class="panel panel-default pin-item">
-                        <div class="panel-body">
-                          <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
-                        </div>
-                          <div class="panel-footer pin-content">
-                          <div class="price"><b>$<%= listing.price %></b></div>
-                          <div class="name"><b><%= link_to listing.title, listing %></b></div>
-                          <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
-                        <hr>
-                          <% if listing.user == current_user %>
-                          <span class="description"><%= link_to 'Edit', edit_listing_path(listing) %></span> |
-                          <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
-                          <% end %>
-                        </div>
-                    </div>
+    <!-- User postings-->
+    <div style="margin-left: 175px">
+      <div class="hero-wrapper">
+        <div align="left">
+              <div class="">
+              <div class = "small-heading">
+                <b>Active Posts: <%= @user.listings.count %></b>
+              </div>
+              <hr>
+              <div class = "grid transitions-enabled">
+                <% if @user.listings.present? %>
+                  <% @user.listings.each do |listing| %>
+                      <div class="panel panel-default pin-item">
+                          <div class="panel-body">
+                            <%= render :partial => 'partials/item_card', locals: {listing: listing}  %>
+                          </div>
+                            <div class="panel-footer pin-content">
+                            <div class="price"><b>$<%= listing.price %></b></div>
+                            <div class="name"><b><%= link_to listing.title, listing %></b></div>
+                            <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
+                          <hr>
+                            <% if listing.user == current_user %>
+                            <span class="description"><%= link_to 'Edit', edit_listing_path(listing) %></span> |
+                            <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+                            <% end %>
+                          </div>
+                      </div>
+                  <% end %>
+                <% else %>
+                  <p>No listings found!</>
                 <% end %>
-              <% else %>
-                <p>No listings found!</>
-              <% end %>
+              </div>
+              <br>
+              </div>
             </div>
-            <br>
-            </div>
-          </div>
-      </div>
-  </div></div>
-
+        </div>
+    </div>
+  </div>
 </div>
