--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -21,8 +21,10 @@
                 }) do |f| %>
 
                     <input id="fileupload" type="file" name="file">
-                    <br />
+                    <br>
                     <div id="listing_media_info"></div>
+                    <br>
+                    <div id="listing_media_progress"></div>
                 <% end %>
 
                     <div class="input-group">
@@ -31,127 +33,127 @@
                         </div>
                     </div>
 
-<script>
-$(function () {
-  var media_file = [];
-
-  document.getElementById('fileupload').onchange = setFileInfo;
-
-  function setFileInfo() {
-    var files = this.files;
-    media_file.push(files[0]);
-    var video = document.createElement('video');
-    video.preload = 'metadata';
-
-    video.onloadedmetadata = function() {
-      var duration = video.duration;
-      media_file[media_file.length - 1].duration = duration;
-      var infos = document.getElementById('infos');
-      infos.textContent = "";
-      for (var i = 0; i < media_file.length; i++) {
-        // infos.textContent += media_file[i].name + " duration: " + media_file[i].duration + '\n';
-         infos.textContent = "Duration: " + sec2time(media_file[i].duration) + '\n';
-      }
-    }
-
-    function sec2time(timeInSeconds) {
-      var pad = function(num, size) { return ('000' + num).slice(size * -1); },
-      time = parseFloat(timeInSeconds).toFixed(3),
-      hours = Math.floor(time / 60 / 60),
-      minutes = Math.floor(time / 60) % 60,
-      seconds = Math.floor(time - minutes * 60),
-      milliseconds = time.slice(-3);
-  
-      // return pad(hours, 2) + ':' + pad(minutes, 2) + ':' + pad(seconds, 2) + ',' + pad(milliseconds, 3);
-      return  minutes + ' minutes and ' + pad(seconds, 2) + ' seconds.';
-  }
-
-    video.src = URL.createObjectURL(files[0]);
-  }
-  
-  $('#new_listing_upload').find("input:file").each(function(i, elem) {
-    var fileInput = $(elem);
-    var form = $(fileInput.parents('form:first'));
-    var submitButton = form.find('input[type="submit"]');
-    var progressBar  = $("<div class='bar'></div>");
-    var barContainer = $("<div class='progress'></div>").append(progressBar);
-    
-    $('#listing_media_info').after(barContainer);
-
-    fileInput.fileupload({
-        fileInput: fileInput,
-        url: form.data('url'),
-        type: 'POST',
-        autoUpload: false,
-        formData: form.data('form-data'),
-        paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
-        dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
-        replaceFileInput: false,
-        add: function (e, data) {
-            $('button#listings_submit').off('click').on('click', function () {
-                $("#overlay").toggle()
-                data.submit();
-            });
-        },
-        progressall: function (e, data) {
-            var progress = parseInt(data.loaded / data.total * 100, 10);
-            progressBar.css('width', progress + '%')
-        },
-        start: function (e) {
-            submitButton.prop('disabled', true);
-            progressBar.
-                css('background', 'green').
-                css('display', 'block').
-                css('width', '0%').
-                text("Loading...");
-        },
-        done: function(e, data) {
-            console.log('Now AJAX call and update listings.')
-
-            submitButton.prop('disabled', false);
-            progressBar.text("Uploading done");
-
-            // extract key and generate URL from response
-            var key   = $(data.jqXHR.responseXML).find("Key").text();
-            var url   = '//' + form.data('host') + '/' + key;
-
-            // create hidden field
-            // var input = $("<input />", { type:'input', name: fileInput.attr('name'), value: url })
-            console.log('final filename: ', key)
-            var url_path = window.location.pathname.split('/');
-            var listings_id = url_path[url_path.length - 1];
-
-            $.ajax({
-                type: 'PATCH',
-                url: '/listings/update_upload/' + listings_id,
-                data: {
-                    listing: listings_id,
-                    media_file_name: key
-                },
-                dataType: 'json',
-                statusCode: {
-                    200: function() {
-                        // if the response is a 200, success, fwd to listing item view
-                        console.log('Redirecting to listing item view.')
-                        window.location.href = "//<%= ENV['APP_HOST'] %>/listings/" + listings_id;
-                    }
-                }
-            })
-        },
-        fail: function(e, data) {
-            submitButton.prop('disabled', false);
-            progressBar.
-                css("background", "red").
-                text("Failed");
-        }
-      });
-  });
-});
-</script>
-
             </div>
         </div>
     </div>
 </div>
 
 <%= render "processing_overlay" %>
+
+<script>
+    $(function () {
+    var media_file = [];
+
+    document.getElementById('fileupload').onchange = setFileInfo;
+
+    function setFileInfo() {
+        var files = this.files;
+        media_file.push(files[0]);
+        var video = document.createElement('video');
+        video.preload = 'metadata';
+
+        video.onloadedmetadata = function() {
+            var duration = video.duration;
+            media_file[media_file.length - 1].duration = duration;
+            var infos = document.getElementById('listing_media_info');
+            infos.textContent = "";
+            for (var i = 0; i < media_file.length; i++) {
+                // infos.textContent += media_file[i].name + " duration: " + media_file[i].duration + '\n';
+                infos.textContent = "Duration: " + sec2time(media_file[i].duration) + '\n';
+            }
+            }
+
+        function sec2time(timeInSeconds) {
+            var pad = function(num, size) { return ('000' + num).slice(size * -1); },
+            time = parseFloat(timeInSeconds).toFixed(3),
+            hours = Math.floor(time / 60 / 60),
+            minutes = Math.floor(time / 60) % 60,
+            seconds = Math.floor(time - minutes * 60),
+            milliseconds = time.slice(-3);
+        
+            // return pad(hours, 2) + ':' + pad(minutes, 2) + ':' + pad(seconds, 2) + ',' + pad(milliseconds, 3);
+            return  minutes + ' minutes and ' + pad(seconds, 2) + ' seconds.';
+        }
+
+        video.src = URL.createObjectURL(files[0]);
+    }
+    
+    $('#new_listing_upload').find("input:file").each(function(i, elem) {
+        var fileInput = $(elem);
+        var form = $(fileInput.parents('form:first'));
+        var submitButton = form.find('input[type="submit"]');
+        var progressBar  = $("<div class='bar'></div>");
+        var barContainer = $("<div class='progress'></div>").append(progressBar);
+        
+        $('#listing_media_progress').after(barContainer);
+
+        fileInput.fileupload({
+            fileInput: fileInput,
+            url: form.data('url'),
+            type: 'POST',
+            autoUpload: false,
+            formData: form.data('form-data'),
+            paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
+            dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
+            replaceFileInput: false,
+            add: function (e, data) {
+                $('button#listings_submit').off('click').on('click', function () {
+                    $("#overlay").toggle()
+                    data.submit();
+                });
+            },
+            progressall: function (e, data) {
+                var progress = parseInt(data.loaded / data.total * 100, 10);
+                progressBar.css('width', progress + '%')
+            },
+            start: function (e) {
+                submitButton.prop('disabled', true);
+                progressBar.
+                    css('background', 'green').
+                    css('display', 'block').
+                    css('width', '0%').
+                    text("Loading...");
+            },
+            done: function(e, data) {
+                console.log('Now AJAX call and update listings.')
+
+                submitButton.prop('disabled', false);
+                progressBar.text("Uploading done");
+
+                // extract key and generate URL from response
+                var key   = $(data.jqXHR.responseXML).find("Key").text();
+                var url   = '//' + form.data('host') + '/' + key;
+
+                // create hidden field
+                // var input = $("<input />", { type:'input', name: fileInput.attr('name'), value: url })
+                console.log('final filename: ', key)
+                var url_path = window.location.pathname.split('/');
+                var listings_id = url_path[url_path.length - 1];
+
+                $.ajax({
+                    type: 'PATCH',
+                    url: '/listings/update_upload/' + listings_id,
+                    data: {
+                        listing: listings_id,
+                        media_file_name: key
+                    },
+                    dataType: 'json',
+                    statusCode: {
+                        200: function() {
+                            // if the response is a 200, success, fwd to listing item view
+                            console.log('Redirecting to listing item view.')
+                            window.location.href = "//<%= ENV['APP_HOST'] %>/listings/" + listings_id;
+                        }
+                    }
+                })
+            },
+            fail: function(e, data) {
+                submitButton.prop('disabled', false);
+                progressBar.
+                    css("background", "red").
+                    text("Failed");
+            }
+        });
+    });
+    });
+</script>
