--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -20,7 +20,7 @@
                     multipart: true,
                 }) do |f| %>
 
-                    <input id="fileupload" type="file" name="file">
+                    <input class="form-control" id="fileupload" type="file" name="file">
                     <br>
                     <div id="listing_media_info"></div>
                     <br>
