Inceased size of header image on landing page. Possible fix for Listing upload not redirecting.

--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -134,7 +134,7 @@
                     type: 'PATCH',
                     url: '/listings/update_upload/' + listings_id,
                     data: {
-                        listing: listings_id,
+                        id: listings_id,
                         media_file_name: key
                     },
                     dataType: 'json',
