Commented out spring as Ruby version is to low. Updated pages about and contact per request.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,13 +16,13 @@
         <div class="row">
             <div class="col-sm-8">
                 <h2>Who we are</h2>
-                <p>As a classified advertisement platform Connechub is introducing a new way for you buy, sale, trade and advertise locally. Users can post video ads from any source such as; their cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera or any other video source.</p>
-                <p>As the old cliché goes, <b>"A picture is worth a thousand words"</b>.</p>
-                <p>However, Connechub was founded on the phrase that <b>"If a picture is worth a thousand words, then a video is worth a million more."</b></p>
+                <p>As a classified advertisement platform Connechub is "Connecting you with jobs, goods, and services in your community."</p>
+				<p>With Connechub you can post a video ad from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
+                <p>As the old clich goes, <b>"A picture is worth a thousand words"</b>.</p>
+                <p>However, a video is worth a million more."</p>
                <br>
                 <p>
-       
-<%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-default btn-lg" %>
+                    <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-default btn-lg" %>
                 </p>
             </div>
             <div class="col-sm-4">
@@ -30,10 +30,10 @@
                 <address>
                     <strong>Connechub, LLC.</strong><br>
                     8807 citrus village dr 107<br>
-                    tampa,fl 33626
+                    Tampa, FL. 33626
                 </address>
                 <address>
-                    <abbr title="Phone">P:</abbr>+1 727 599 8661
+                    <abbr title="Phone">P:</abbr>+1 813.438.4181
                     <br>
                     <abbr title="Email">E:</abbr> <a href="mailto:admin@connechub.com">admin@connechub.com</a>
                 </address>
