--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,9 @@
 <div style="height: 15px; width: 100%;"></div>
 
 <div class="container_12">
-  <%= link_to 'Connechub', root_path %> > <%= @category.name %> 
+  <%= link_to 'Connechub', root_path %> > <%= @category.name %>
 <hr>
 
-<div class="leftbar">
+<div class="leftbar_old col-xs-6 col-sm-8 col-md-10">
   <%= render :partial => 'categories/show', locals: {listings: @listings}  %>
 </div>
