UPDATED helper scripts. ADDED user redirect once video is uploaded.

--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -142,7 +142,8 @@
                         200: function() {
                             // if the response is a 200, success, fwd to listing item view
                             console.log('Redirecting to listing item view.')
-                            window.location.href = "//" + window.location.hostname + "/listings/" + listings_id;
+                            // window.location.href = "//" + window.location.hostname + "/listings/" + listings_id;
+                            window.location.href = "//" + window.location.hostname
                         }
                     }
                 })
