--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,15 +12,15 @@
   <div class="form-group text-center row">
     <%= form_tag search_listings_path, method: :get do |f| %>
 
-      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+      <div class="col-xs-12 col-sm-6">
         <%= text_field_tag :search, nil, placeholder: 'keywords', class: "form-control"%>
       </div>
 
-      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-        <%= text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control"%>
-      </div>
+      <!-- <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <% #= text_field_tag :location, nil, placeholder: 'city, state or zip', class: "form-control"%>
+      </div>-->
 
-      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+      <div class="col-xs-12 col-sm-6">
         <%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}), class: "form-control"%>
       </div>
 
