--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -36,7 +36,7 @@
                     <div id="sub_category_cost_container" style="display: none">
                         <div class="input-group">
                             <div class="input-group-addon" style="color: red">Fee required</div>
-                            <div class="form-control">
+                            <div class="form-control fee_amount_message">
                                 Selected category requires a payment of <span id="fee_amount" style="font-weight: bolder"></span> on the next step.
                             </div>
                         </div>
