--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -3,7 +3,7 @@
     <% @listings.each do |listing| %>
         <div class="panel panel-default pin-item">
             <div class="panel-body">
-              <%= link_to image_tag(listing.presigned_media_url, class: "img-responsive"), listing.title %>
+              <%= link_to image_tag(listing.presigned_media_url, class: "img-responsive"), listing %>
             </div>
               <div class="panel-footer pin-content">
               <div class="price"><b>$<%= listing.price %></b></div>
@@ -11,7 +11,9 @@
               <div class="description"><%= listing.city %>, <%= listing.state %></div>
               <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
             <hr>
-              <div><%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>    <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
+              <div>
+                <%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>
+                <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
               </div>
             </div>
         </div>
