--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_tag charges_path do %>
     <article>
 
-        <% if flash[:error].present? %>
+        <% if flash[:danger].present? %>
         <div id="error_explanation">
-            <p><%= flash[:error] %></p>
+            <p><%= flash[:danger] %></p>
         </div>
         <% end %>
 
