--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,18 @@
     <br />
     <br />
 
-    <%= slide_down_alerts %>
+    <div class = "container">
+      <div class="flash">
+          <% flash.each do |key, value| %>
+            <div class="alert alert-<%= key %> alert-dismissible">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <%= value %>
+            </div>
+          <% end %>
+      </div>
+    </div>
 
     <div class = "container">
       <%= yield %>
