Styled alter-notice (from BS4) in application.css.scss since we are running BS3.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1170,3 +1170,10 @@ body > div > div > div > div > ul {
 .fee_amount_message {
   height: initial
 }
+
+/* bootstrap 4 colors in bootstrap 3 */
+.alert-notice {
+  color: #31708f;
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+}
