User active listings now correctly refects based on listing ending_at value.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
         <div align="left">
               <div class="">
               <div class = "small-heading">
-                <b>Active Posts: <%= @user.listings.count %></b>
+                <b>Active Posts: <%= @listings.count %></b>
               </div>
               <hr>
               <div class = "grid transitions-enabled">
