UPDATED ./helper_scripts. ADDED migration to fix Category capitalization. ADDED cat/subcat pricing page. ADDED pricing page to footer menu under About Us.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
                         <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
 	                </div>
                     <br>
-	                <div class = "small-heading", style="color:red">(We need your current password to alow password changes.)</div>
+	                <div class = "small-heading", style="color:red">(We need your current password to allow password changes.)</div>
 		            <br>
 
                     <div class="input-group">
