--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,6 +86,7 @@
                         <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
                           <li><%= link_to 'Connechub', about_path %></li>
                           <li><%= link_to 'Contact Us', contact_path %></li>
+                          <li><%= link_to 'Prices', '/prices/index' %></li>
                         </ul>
                       </li>
                       <li class="dropup">
